[gd_scene load_steps=2 format=3 uid="uid://c0etp0qos8kgq"]

[ext_resource type="Script" path="res://myHitBox.gd" id="1_2urfl"]

[node name="MyHitBox" type="Area2D"]
script = ExtResource("1_2urfl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableTimer" type="Timer" parent="."]

[connection signal="timeout" from="DisableTimer" to="." method="_on_disable_timer_timeout"]
